[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/GFX/CharacterCotaint/Ivent/NextCardIvent.png" type="Texture" id=1]
[ext_resource path="res://Resources/GFX/LeftTextBack.png" type="Texture" id=2]
[ext_resource path="res://Resources/GFX/MainCards/BackGround.png" type="Texture" id=3]
[ext_resource path="res://Scenes/CharacterPortraitStandAlone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resources/GFX/MainCards/CardShadow.png" type="Texture" id=6]
[ext_resource path="res://Resources/GFX/Interface/Font/JetBrainsMono-VariableFont_wght.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Resources/GFX/Interface/Font/Ivent_Itog.tres" type="DynamicFont" id=10]
[ext_resource path="res://Resources/GFX/CharacterCotaint/Eyes/EyesClosed.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Character(nextcharacter).gd" type="Script" id=19]

[sub_resource type="DynamicFont" id=4]
size = 50
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 50
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=1]
resource_name = "IdleOne"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Character/FullHead:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 2.3, 3.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 5 ), Vector2( -2, 5 ), Vector2( -2, -7 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character/FullHead/Eyes:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 3.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 18 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Character/Neck:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 2.3, 4.6, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.05 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1.05 ), Vector2( 1, 1.05 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1.05 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.7, 3.3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "return_eyes"
}, {
"args": [  ],
"method": "return_eyes"
}, {
"args": [  ],
"method": "return_eyes"
}, {
"args": [  ],
"method": "return_eyes"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "LeftReacton"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Character/FullHead/Eyes:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -13, -18 ), Vector2( -13, -18 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "RightReacton"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Character/FullHead/Eyes:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 13, -18 ), Vector2( 13, -18 ), Vector2( 0, 0 ) ]
}

[node name="CharacterCard" type="Sprite"]
scale = Vector2( 0.9, 0.9 )
offset = Vector2( 1173.53, 189.139 )
script = ExtResource( 19 )

[node name="CardShadow" type="NinePatchRect" parent="."]
modulate = Color( 1, 1, 1, 0.337255 )
self_modulate = Color( 0.262745, 0.129412, 0.129412, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -278.122
margin_top = -380.5
margin_right = 391.878
margin_bottom = 549.5
rect_min_size = Vector2( 670, 930 )
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 335, 465 )
texture = ExtResource( 6 )

[node name="Back" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Character" parent="." instance=ExtResource( 5 )]
position = Vector2( -6, -15 )

[node name="IventPortrait" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -420.0
margin_top = -420.0
margin_right = -420.0
margin_bottom = -420.0
rect_min_size = Vector2( 840, 840 )
rect_pivot_offset = Vector2( 420, 420 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LeftChooseRect" type="NinePatchRect" parent="Control"]
anchor_left = -0.0343792
anchor_top = 0.0053008
anchor_right = 0.679906
anchor_bottom = 0.719586
margin_left = -0.0104733
margin_top = -4.45267
margin_right = 199.99
margin_bottom = -104.452
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 600, 0 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LChooseText" type="Label" parent="Control/LeftChooseRect"]
anchor_left = 0.05
anchor_top = 0.08
anchor_right = 0.85
anchor_bottom = 0.76
rect_min_size = Vector2( 640, 340 )
custom_constants/line_spacing = -6
custom_fonts/font = SubResource( 4 )
text = "HelpText
привет"
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="Control/LeftChooseRect"]

[node name="RightChooseRect" type="NinePatchRect" parent="Control"]
anchor_left = 0.14318
anchor_right = 0.14318
anchor_bottom = 0.714286
margin_left = 599.999
margin_right = 1100.0
margin_bottom = 200.0
rect_rotation = 90.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RChooseText" type="Label" parent="Control/RightChooseRect"]
anchor_left = 0.08
anchor_top = 0.05
anchor_right = 0.76
anchor_bottom = 0.05
margin_left = -640.0
margin_right = -340.0
margin_bottom = 340.0
rect_min_size = Vector2( 640, 340 )
rect_rotation = -90.0
rect_pivot_offset = Vector2( 640, 0 )
custom_constants/line_spacing = -6
custom_fonts/font = SubResource( 5 )
text = "HelpText
привет"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="Control/RightChooseRect"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IdleOne"
anims/IdleOne = SubResource( 1 )

[node name="LeftReaControl" type="AnimationPlayer" parent="."]
anims/LeftReacton = SubResource( 2 )

[node name="RightReaControl" type="AnimationPlayer" parent="."]
anims/RightReacton = SubResource( 3 )

[node name="AnimationCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="TextItog" type="Control" parent="."]
visible = false
anchor_left = -3.63305e-08
anchor_top = -3.63305e-08
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -420.0
margin_top = -420.0
margin_right = -420.0
margin_bottom = -420.0
rect_pivot_offset = Vector2( 402, 402 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="TextItog"]
anchor_left = 0.0833333
anchor_top = 0.202381
anchor_right = 0.916667
anchor_bottom = 0.797619
rect_pivot_offset = Vector2( 350, 250 )
custom_fonts/font = ExtResource( 10 )
text = "Вам, не удалось произвести хоршее впечатление на ревизора. Документы представлены не в срок. Возможно повезёт в следующий раз"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="resized" from="Control/LeftChooseRect" to="." method="_on_LeftChooseRect_resized"]
[connection signal="resized" from="Control/RightChooseRect" to="." method="_on_RightChooseRect_resized"]
[connection signal="timeout" from="AnimationCooldown" to="." method="_on_AnimationCooldown_timeout"]
